--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,27 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  hexcolor: ^3.0.1
+  flutter_svg:
+  image_picker: ^0.8.7+5
+  overflow_view: ^0.3.1
+  latlong2: ^0.8.0
+  flutter_map: 
+  geocoder2: ^1.4.0
+  tuple: ^2.0.1
+  positioned_tap_detector_2: ^1.0.4
+  transparent_image: ^2.0.1
+  async: ^2.11.0
+  flutter_image: ^4.1.6
+  vector_map: ^0.7.0
+  proj4dart: ^2.1.0
+  meta: ^1.9.1
+
+  flutter_animated_button: ^2.0.3
+  
+  
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,12 +60,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
   flutter_native_splash: ^2.3.0
   flutter_lints: ^2.0.0
 
 flutter:
   assets:
     - assets/Images/
+    - assets/fonts/
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,9 +82,7 @@ flutter:
 # The following section is specific to Flutter packages.
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
