--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   meta: ^1.9.1
 
   flutter_animated_button: ^2.0.3
+  fluentui_system_icons: ^1.1.202
+  geolocator: ^9.0.2
+  http: ^0.13.4
   
   
   
